force-app/main/default/objects/Strategy_Resources__c/Strategy_Resources__c.object-meta.xml
<CustomObject>
    <label>Strategy Resources</label>
    <nameField>
        <displayFormat>SR-{0}</displayFormat>
        <label>Strategy Resources Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategy Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>