force-app/main/default/objects/Strategy_Resources__c/fields/Abatement_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Abatement_Strategies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abatement Strategies</label>
    <referenceTo>Abatement_Strategies__c</referenceTo>
    <relationshipLabel>Strategy Resources</relationshipLabel>
    <relationshipName>Strategy_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>