force-app/main/default/objects/Strategy_Resources__c/fields/BudgetCalculation__c.field-meta.xml
<CustomField>
    <fullName>BudgetCalculation__c</fullName>
    <label>Budget -  Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>