force-app/main/default/objects/Strategy_Resources__c/fields/BudgetItem__c.field-meta.xml
<CustomField>
    <fullName>BudgetItem__c</fullName>
    <label>Budget - Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>