force-app/main/default/objects/Strategy_Resources__c/fields/BudgetPurpose__c.field-meta.xml
<CustomField>
    <fullName>BudgetPurpose__c</fullName>
    <label>Budget - Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>