force-app/main/default/objects/Strategy_Resources__c/fields/BudgetTotalChargedToAward__c.field-meta.xml
<CustomField>
    <fullName>BudgetTotalChargedToAward__c</fullName>
    <label>Budget - Total Charged to Award</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>