force-app/main/default/objects/Strategy_Resources__c/fields/PersonnelKeyStaffAnnualSalary__c.field-meta.xml
<CustomField>
    <fullName>PersonnelKeyStaffAnnualSalary__c</fullName>
    <label>Personnel - Key Staff Annual Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>