force-app/main/default/objects/Strategy_Resources__c/fields/PersonnelLevelOfEffort__c.field-meta.xml
<CustomField>
    <fullName>PersonnelLevelOfEffort__c</fullName>
    <label>Personnel - Level of Effort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>