force-app/main/default/objects/Strategy_Resources__c/fields/PersonnelName__c.field-meta.xml
<CustomField>
    <fullName>PersonnelName__c</fullName>
    <label>Personnel - Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>