force-app/main/default/objects/Strategy_Resources__c/fields/PersonnelPosition__c.field-meta.xml
<CustomField>
    <fullName>PersonnelPosition__c</fullName>
    <label>Personnel - Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>