force-app/main/default/objects/Strategy_Resources__c/fields/PersonnelTotalChargedToAward__c.field-meta.xml
<CustomField>
    <fullName>PersonnelTotalChargedToAward__c</fullName>
    <label>Personnel - Total Charged to Award</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>