force-app/main/default/objects/Strategy_Resources__c/fields/Strategy_Name__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Name__c</fullName>
    <label>Strategy Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>