force-app/main/default/objects/Strategy_Resources__c/recordTypes/Budget_Information.recordType-meta.xml
<RecordType>
    <fullName>Budget_Information</fullName>
    <active>true</active>
    <label>Budget Information</label>
</RecordType>