force-app/main/default/objects/Strategy_Resources__c/recordTypes/Personal_Information.recordType-meta.xml
<RecordType>
    <fullName>Personal_Information</fullName>
    <active>true</active>
    <label>Personal Information</label>
</RecordType>